# bdt

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  .zenodo.json  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Makefile  README.rst  bold.dscalar.nii  dseg.tsv  env.yml  long_description.rst  masked_parc.ptseries.nii  pyproject.toml  tox.ini  tractprofile.tsv
.circleci/: config.yml
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: contrib.yml  docker.yml  pixi-lock.yml  test.yml
.maint/: CONTRIBUTORS.md  INSTRUCTIONS.md
docs/: api.rst  conf.py  faq.rst  index.rst  installation.rst  license.rst  links.rst  outputs.rst  spaces.rst  spec.rst  usage.rst  workflows.rst
docs/dev/: 2026-06-01-bdt-design.md  2026-06-01-bdt-implementation-plan.md  2026-06-01-bdt-plan-review.md  2026-07-15-bdt-user-stories-and-spec.md  2026-07-15-hackathon-meeting-notes-session-1.md  2026-07-15-hackathon-meeting-notes-session-2.md  2026-07-16-bdt-nodegraph-status.md  2026-07-16-hackathon-meeting-notes-session-1.md  bdt_meeting_notes.md  exemplar-use-cases.md
docs/sphinxext/: github_link.py
docs/superpowers/plans/: 2026-07-17-tractogram-to-pseg.md  2026-07-19-transform-chaining.md  2026-07-20-volumetric-parcellate-scalar.md  2026-07-20-volumetric-parcellate-timeseries.md  2026-07-21-parcellation-statistics.md  2026-07-21-xcpd-parcellation.md  2026-07-23-dataset-description.md
docs/superpowers/specs/: 2026-07-17-tractogram-to-pseg-design.md  2026-07-18-transform-chaining-design.md  2026-07-20-volumetric-parcellate-scalar-design.md  2026-07-20-volumetric-parcellate-timeseries-design.md  2026-07-21-parcellation-statistics-design.md  2026-07-21-xcpd-parcellation-design.md  2026-07-23-dataset-description-design.md
scripts/: cifti_parcellate.yml  container_smoke_test.sh  convert_difumo_mni2009_to_fslr.py  native_space_parcellate.yml  nifti_parcellate.yml  run_cifti_parcellate.sh  run_native_space_parcellate.sh  run_nifti_parcellate.sh  run_tract_parcellate.sh  tract_parcellate.yml
src/bdt/: config.py
src/bdt/actions/: __init__.py  _giftirs.py  _io.py  _util.py  _workbench.py  cifti.py  connectivity.py  parcellate.py  surface.py
src/bdt/cli/: __init__.py  parser.py  run.py  version.py  workflow.py
src/bdt/data/: __init__.py  bdt_entities.json
src/bdt/engine/: __init__.py  builders.py  executor.py  factories.py  pipeline.py  pybids_provider.py  result.py  selection.py  workflow.py
src/bdt/interfaces/: __init__.py  bids.py  cifti.py  cifti_probseg.py  cifti_stats.py  connectivity.py  derivatives.py  giftirs.py  parcellate.py  parcellate_stats.py  probseg.py  tractography.py  transforms.py  workbench.py
src/bdt/outputs/: __init__.py  dataset_description.py  plan.py  provenance.py  sink.py
src/bdt/spec/: __init__.py  actions.py  load.py  model.py  validate.py
src/bdt/tests/: tests.py
src/bdt/tools/: __init__.py  niwrap_run.py
src/bdt/transforms/: __init__.py  graph.py  queries.py  templateflow.py
src/bdt/utils/: bids.py  cifti.py  filemanip.py  images.py  statistics.py  utils.py  write_save.py
src/bdt/workflows/: __init__.py  base.py  connectivity.py  parcellation.py
src/fmripost_template/: config.py
src/fmripost_template/cli/: __init__.py  parser.py  workflow.py
src/fmripost_template/data/: NOTICE  reports-spec.yml
src/fmripost_template/interfaces/: __init__.py  (+1 more)
test/: test_cli.py
test/actions/: test_builders.py  test_cifti_actions.py  test_io.py  test_surface.py  test_workbench_dry.py
test/engine/: test_cifti_interfaces.py  test_cifti_probseg.py  test_cifti_stats.py  test_cifti_utils.py  test_cli_run.py  test_executor.py  test_factory_context_transforms.py  test_functional_connectivity_routing.py  test_image_dtype_guard.py  test_native_space.py  test_nifti_parcellate.py  test_nipype_workflow.py  test_niwrap_run.py  test_output_plan.py  test_outputs.py  test_parcellate_routing_masker.py  test_parcellate_scalar_routing.py  test_parcellate_statistics_routing.py  test_parcellate_stats.py  test_parcellate_timeseries_routing.py  test_parcellate_volumetric.py  test_pipeline.py  test_probseg_parcellate.py  test_pybids_provider.py  test_statistics_helpers.py  test_tractography.py  test_transforms_interface.py  test_workflow_label_wiring.py
test/spec/: test_spec.py  test_templateflow_edges.py  test_transforms.py
(+8 files in other folders)
