[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions"]
build-backend = "hatchling.build"

[project]
name = "bdt"
description = 'A post-processing BIDS App that ingresses BIDS-Atlas and BIDS Derivative datasets and parcellated selected derivatives with the atlases.'
readme = "README.rst"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = []
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "acres",
  "fmriprep @ git+https://github.com/nipreps/fmriprep.git@master",
  "nipype >= 1.8.5",
  "nireports @ git+https://github.com/nipreps/nireports.git@main",
  "nitransforms >= 24.0.2",
  "niworkflows @ git+https://github.com/nipreps/niworkflows.git@master",
  "pybids >= 0.15.6",
  "sdcflows @ git+https://github.com/nipreps/sdcflows.git@main",
  "smriprep @ git+https://github.com/nipreps/smriprep.git@master",
  "typer",
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "doctest-ignore-unicode",
    "pydot >=1.2.3",
    "pydotplus",
    "recommonmark",
    "sphinx >= 4.2.0",
    "sphinx-argparse",
    "sphinx-markdown-tables",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
    "svgutils",
]
tests = [
  "coverage",
  "pytest",
  "pytest-cov",
  "pytest-env",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]

# Aliases
all = ["bdt[doc,maint,tests]"]

[project.urls]
Documentation = "https://github.com/nipreps/BDT#readme"
Issues = "https://github.com/nipreps/BDT/issues"
Source = "https://github.com/nipreps/BDT"

[project.scripts]
bdt = "bdt.cli.run:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "src/bdt/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["src/bdt"]
exclude = [
  "test/data",  # Large test data directory
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/bdt/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# Disable black
[tool.black]
exclude = ".*"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S311",  # We are not using random for cryptographic purposes
  "ISC001",
  "S603",
  "PT023",
  "S113",
  "S202",
  "S602",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "integration: mark test as an integration test",
]
env = [
    "RUNNING_PYTEST = 1",
]
testpaths = ["test"]

#
# Pixi configuration (align with ASLPrep pattern)
#

[tool.pixi.workspace]
channels = ["https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation.env]
FSLDIR = "$CONDA_PREFIX"
FSLOUTPUTTYPE = "NIFTI_GZ"

[tool.pixi.environments]
default = { features = ["editable"], solve-group = "default" }
test = { features = ["editable", "tests"], solve-group = "default" }
bdt = { features = ["production", "container"], solve-group = "production" }

[tool.pixi.feature.editable.pypi-dependencies]
bdt = { path = ".", editable = true }
[tool.pixi.feature.production.pypi-dependencies]
bdt = { path = ".", editable = false }

[tool.pixi.tasks]

[tool.pixi.pypi-options.dependency-overrides]
numpy = ">=2.2"

[tool.pixi.dependencies]
python = "3.12.*"
nodejs = "20.*"

[tool.pixi.feature.container.dependencies]
git = "*"
git-annex = { version = "*", build = "alldep*" }

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.html,dataset_description.json,*.bib,pixi.lock'
# te - TE
# Weill - name
# reson - Reson. abbreviation in citation
ignore-words-list = 'te,weill,reson,ND'
